chore: Update site metadata and settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
     "cSpell.words": [
+        "calcitriol",
         "carb",
         "catheterization",
-        "macronutrient"
+        "macronutrient",
+        "microbiome",
+        "transformative"
     ]
 }
