feat: Add mention of Mark Wieser in the acknowledgements

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "catheterization",
         "macronutrient",
         "microbiome",
-        "transformative"
+        "transformative",
+        "Wieser"
     ]
 }
