feat: Improve image styling and positioning on the homepage

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,15 @@
         "calcitriol",
         "carb",
         "catheterization",
+        "defibbed",
+        "Gigerenzer",
+        "lipidology",
+        "LMHR",
         "macronutrient",
         "microbiome",
+        "rosuvastatin",
+        "statin",
+        "Statins",
         "transformative",
         "Wieser"
     ]
