feat: Update book-related components and content

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,10 +9,12 @@
         "LMHR",
         "macronutrient",
         "microbiome",
+        "Ribeye",
         "rosuvastatin",
         "statin",
         "Statins",
         "transformative",
+        "Widowmaker",
         "Wieser"
     ]
 }
